--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Chronicled Drone Gate</title>
   <link rel="stylesheet" type="text/css" href="toggle.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
   <div id="app"></div>
